--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 
 
 body{
-    background-color: black;
+    background-color: #363635;
     color: white;
 }
 
@@ -26,7 +26,20 @@ p{
     margin: -2px;
     padding: 0;
     margin-right: -4px;
-    width: 100px;
-    height: 80px;
+    width: 160px;
+    height: 140px;
 
+}
+
+footer{
+    color: white;
+    margin-top: 20px;
+    width: 100%; 
+    padding-top: 60px;
+    height: 200px;
+    margin-left: 10px;
+
+    background-color:black;	
+	text-align:center;
+	float:left;
 }
