--- a/index.css
+++ b/index.css
@@ -16,6 +16,16 @@ body{
     padding-top: 30px;
 }
 
+#blank{
+    text-align: center; 
+    float: right; 
+    width: 612px; 
+    height: 762px; 
+    background-color: white; 
+    color: black;
+    padding-top: 30px;
+}
+
 div{
     margin: -10px;
     padding: 0;
@@ -30,7 +40,7 @@ div{
     margin-right: -4px;
 }
 
-p{
+#stlCube p{
     text-align:left;
     display:inline-block; 
     border-style: dashed;
@@ -65,7 +75,7 @@ a:visited {
 }
 
 .topnav {
-    background-color: #333;
+    background-color:black;
     overflow: hidden;
   }
   
@@ -77,16 +87,31 @@ a:visited {
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
+    
   }
   
   /* Change the color of links on hover */
   .topnav a:hover {
-    background-color: #ddd;
-    color: black;
+    background-color: #363635;
+    color: white;
+    
   }
   
   /* Add a color to the active/current link */
   .topnav a.active {
-    background-color: #04AA6D;
+    background-color: #606060;
     color: white;
   }
+
+
+  button {
+    background-color: #606060; /* Green */
+    border: none;
+    color: white;
+    margin-top: 10px;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
