--- a/index.css
+++ b/index.css
@@ -1,9 +1,12 @@
 
 
 body{
-    background-color: #363635;
-    color: white;
-    font-family:  Helvetica;
+    background-color: white;
+    color: black;
+    font-family: "HelveticaNeue-CondensedBold", "HelveticaNeueBoldCondensed", "HelveticaNeue-Bold-Condensed", "Helvetica Neue Bold Condensed", "HelveticaNeueBold", "HelveticaNeue-Bold", "Helvetica Neue Bold", "HelveticaNeue", "Helvetica Neue", 'TeXGyreHerosCnBold', "Helvetica", "Tahoma", "Geneva", "Arial Narrow", "Arial", sans-serif; 
+    font-weight:600; 
+    font-stretch:condensed;
+    border-color: #d58570;
 }
 
 #stlCube{
@@ -11,7 +14,7 @@ body{
     float: right; 
     width: 612px; 
     height: 762px; 
-    background-color: white; 
+    background-color: #363635; 
     color: black;
     padding-top: 30px;
 }
@@ -58,20 +61,19 @@ footer{
     width: 100%; 
     padding-top: 60px;
     height: 200px;
-    margin-left: 10px;
 
-    background-color:black;	
+    background-color:#c35442;	
 	text-align:center;
 	float:left;
 }
 
 a:link {
-    color: red;
+    color: black;
 
 }
   
 a:visited {
-    color: red;
+    color: black;
 }
 
 .topnav {
@@ -104,7 +106,7 @@ a:visited {
   }
 
 
-  button {
+button {
     background-color: #606060; /* Green */
     border: none;
     color: white;
@@ -114,4 +116,18 @@ a:visited {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+}
+
+h1 a{
+    font-size: 200%;
+    color:black;
+    text-align:center;
+    text-decoration: none;
+}
+
+h1 a.active {
+    text-decoration: none;
+    text-align:center;
+    color: #d6001c;
+    overflow: hidden;
 }
