--- a/index.css
+++ b/index.css
@@ -1,4 +1,9 @@
-
+#intro{
+    width: 40%;
+    float:center; 
+    padding-left: 5px; 
+    margin-left:10px;
+}
 
 body{
     background-color: white;
@@ -7,6 +12,14 @@ body{
     font-weight:600; 
     font-stretch:condensed;
     border-color: #d58570;
+}
+
+#navBarLeft{
+    float: left; 
+    width: 500px; 
+    margin: 20px; 
+    margin-top:100px; 
+    margin-bottom: 150px;
 }
 
 #stlCube{
