--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@
 }
 
 body{
+    height:100%;
     background-color: white;
     color: black;
     font-family: "HelveticaNeue-CondensedBold", "HelveticaNeueBoldCondensed", "HelveticaNeue-Bold-Condensed", "Helvetica Neue Bold Condensed", "HelveticaNeueBold", "HelveticaNeue-Bold", "Helvetica Neue Bold", "HelveticaNeue", "Helvetica Neue"; 
