--- a/forms.css
+++ b/forms.css
@@ -1,10 +1,12 @@
 #printPreview{
   visibility: hidden;
+  float:right; 
+  width:700px;
+  height:1000px;
 }
 
 .overlay {
   position: absolute;
-  z-index: 1;
 }
   
 #bottom {
