--- a/forms.css
+++ b/forms.css
@@ -3,40 +3,41 @@
   float:right; 
   width:700px;
   height:1000px;
+  margin: 10px;
+  position: absolute;
+  left:45%;
 }
 
 #bottom {
   position: absolute;
-  top: 0px;
   background-color: none;
-  width: 612px; 
   height: 792px; 
   padding:0px;
+  width:612px;
 }
 
 #top{
   position: absolute;
-  left:55%; 
   float: right;
-  top:40px;
+  top:-80px;
+  left:16%;
 } 
 
 #top2{
   position: absolute;
-  left:55%; 
   float: right;
-  top:620px;
+  top:520px;
+  left:16%;
+  margin: -20px;
 } 
 
 #stl_contTop {
-  top:200px;
-  height:300px;
+  height:400px;
   width:400px;
 }
 
 #stl_contButton {
-  top:400px;
-  height:300px;
+  height:400px;
   width:400px;
 }
 
@@ -85,4 +86,9 @@ button:hover {
   position: absolute;
   top: 30%;
   left:120%;
+}
+
+#instructions{
+  float:left;
+  margin-top: 50px;
 }
