--- a/forms.css
+++ b/forms.css
@@ -77,7 +77,7 @@ button:hover {
   top: 200px;
   left: 0;
   background-color: none;
-  width: 200px; 
+  width: 800px; 
   height: 792px; 
   padding:0px;
 }
@@ -85,7 +85,8 @@ button:hover {
 #annoDisplay p{
   position: absolute;
   top: 30%;
-  left:120%;
+  left:0;
+  text-align: center;
 }
 
 #instructions{
