--- a/index.css
+++ b/index.css
@@ -85,7 +85,7 @@ div{
 
 footer{
     color: white;
-    margin-top: 80px;
+    margin-top: 20%;
     width: 100%; 
     padding-top: 60px;
     height: 200px;
