--- a/Web Page1.0/styles.css
+++ b/Web Page1.0/styles.css
@@ -1,18 +1,18 @@
 body {
     font-family: Arial, sans-serif;
 }
-
+/* The Navigation Bar (Background) */
 .navbar {
     background-color: #333;
     overflow: hidden;
 }
-
+/* Nav Bar Items */
 .nav-list {
     list-style-type: none;
     margin: 0;
     padding: 0;
 }
-
+/* Nav Bar Items */
 .nav-list li {
     float: left;
 }
@@ -24,8 +24,46 @@ body {
     padding: 14px 16px;
     text-decoration: none;
 }
-
+/* Nav Bar Items */
 .nav-list li a:hover {
     background-color: #ddd;
     color: black;
+}
+/* The Popup (background) */
+.popup {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Popup Content */
+.popup-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
 }
