--- a/Web Page1.0/styles.css
+++ b/Web Page1.0/styles.css
@@ -19,13 +19,10 @@
 }
 
 /* logo/name */
-.name{
-    color: #404040;
-    text-decoration: none;
-    font-size: 28px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+.logo{
+    width: 50%;
+    height: auto;
+    display:block;
 }
 
 /* menu items */
@@ -351,7 +348,6 @@ nav .fas{
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-
 }
 
 .footer-nav li{
