--- a/Web Page1.0/styles.css
+++ b/Web Page1.0/styles.css
@@ -1,7 +1,7 @@
 *{
     margin:0;
     padding:0;
-    font-family: "Futura";  
+    font-family: "Helvetica Neue","Helvetica","Arial",sans-serif; 
     box-sizing:border-box;
 }
 
@@ -274,6 +274,7 @@ nav .fas{
     font-size: 28px;
     font-style: normal;
     font-weight: 400;
+    /* font-weight: 700; this is what I pushed*/
     line-height: normal;
 }
 
@@ -298,7 +299,7 @@ nav .fas{
     height: auto;
     vertical-align: middle;
     border-radius: 0px;
-  }
+}
 
 .about{
     margin-top: 40px;
