--- a/Web Page1.0/about-styles.css
+++ b/Web Page1.0/about-styles.css
@@ -99,7 +99,8 @@ nav .fas{
     color:#404040;
     font-size: 28px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 700;
+    /* font-weight: 400; */
     line-height: normal;
     text-align: center;
 }
