--- a/Web Page1.0/styles.css
+++ b/Web Page1.0/styles.css
@@ -105,6 +105,25 @@ nav .fas{
     margin-bottom: 40px;
     height: 500px;
 }
+#printPreview{
+    visibility: hidden;
+    float:right; 
+    width:70px;
+    height:100px;
+    margin: 10px;
+    left:45%;
+}
+#dummyDisplay{
+    width:70px;
+    height:100px;
+    border-style: ridge; 
+    margin: 20px; 
+    left:50%;
+}
+.stl_contMain{
+    width: 600px; 
+    height: 500px
+}
 #download-preview-container{
     margin-top: 40px;
     margin-bottom: 40px;
