--- a/Web Page1.0/gallery-styles.css
+++ b/Web Page1.0/gallery-styles.css
@@ -210,6 +210,14 @@ nav .fas{
     border-radius: 10px;
 }
 
+.img-text{
+    margin-top: 5%;
+    color:#404040;
+    text-align: center;
+}
+
+
+
 #myImg:hover {opacity: 0.7;}
 
 /* The Modal (background) */
