--- a/Web Page1.0/styles.css
+++ b/Web Page1.0/styles.css
@@ -95,7 +95,6 @@ nav .fas{
     position:fixed;
     top: 40vh;
     left: 0;
-    z-index: 1;
     cursor: pointer;
     width: fit-content;
 }
@@ -117,13 +116,13 @@ nav .fas{
 
 #fb-form{
     position: fixed;
-    top: 37vh;
+    top: 28vh;
     left: -300px; /* == -1* width, toggle-left [below]*/
     -webkit-transition: all 0.15s ease-out 0;
     -moz-transition: all 0.15s ease-out 0;
     transition: all 0.15s ease-out 0;
     width: 300px; /* == -1* left, toggle-left [below]*/
-    height: 30vh;
+    height: 60vh;
     padding: 1vw;
     background: black; 
     color: white;
@@ -147,32 +146,87 @@ nav .fas{
     left: 300px; /*== fb-form width*/
 }
 
-.star-checked {
-    color: #FFE07D;
+
+
+#fb-user-inputs-form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 90%;
 }
 
-#star-rating {
+#fb-user-inputs-items {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     height: max-content;
-    width: max-content;
+    margin: 2vh 0.5vw;
 }
+
+#select-role {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 2vh;
+}
+
+#role {
+    border: 1px solid white;
+    border-bottom-left-radius: 3%;
+    border-bottom-right-radius: 3%;
+}
+
+
+#text-input {
+    margin-top: 1vh;
+    width: 100%;
+    border-radius: 3%;
+    height: 20vh;
+    padding: 0.3vw;
+    font-size: 14px;
+}
+
 #fb-survey-btn {
-    border-radius: 10px;
+    border-radius: 1vh;
     background: #FF664F;
-    width: 90px;
-    height: 50px;
-    padding: 2px;
+    height: 5vh;
+    padding: 0 1vw;
     color: white;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
-    line-height: normal;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
     cursor: pointer;
     border: none;
+    margin-bottom: 2vh;
 }
 
+#fb-submit-btn {
+    border-radius: 1vh;
+    background: #7072EC;
+    height: 4vh;
+    padding: 0 1vw;
+    color: white;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    border: none;
+    margin-bottom: 2vh;
+}
+
+.hide {
+    position:absolute; 
+    top:-1px; 
+    left:-1px; 
+    width:1px; 
+    height:1px;
+}
 /* upload container */
 #upload-container{
     height: 200px;
